--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -29,10 +29,10 @@
   </div>
 
   <div class="field">
-    <%= form.label :content %>
-    <%= form.text_area :content %>
-  </div>
-
+      <%= form.label :content %>
+      <%= form.cktext_area :content %>
+    </div>
+    
   <div class="actions">
     <%= form.submit %>
   </div>
