--- a/app/views/promo/index.html.erb
+++ b/app/views/promo/index.html.erb
@@ -2,3 +2,4 @@
       <%= react_component 'M_TopMenu', {categories: @categories}%>
       <%= react_component 'O_PostsMainPage', {articles: @articles} %>
 </div>
+<%= react_component 'O_Footer' %>
