--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -517,6 +517,25 @@ text-align: center;
 .text_content {
   font-size: 15px;
 }
+.hashtag_article {
+  margin-left: 30px;
+}
+
+.container_show_article {
+  width: 100%;
+  height: 336px;
+  padding-top: 30px;
+  border-radius: 20px;
+  background-size: cover !important;
+  margin-top: 100px !important;
+
+}
+.commenter {
+  width: 20%;
+}
+.cont_art {
+  margin: 0 auto;
+}
 .Hashtag--default {
   color: black;
   margin-top: 30px;
@@ -529,6 +548,7 @@ text-align: center;
 }
 .button--default {
   background: #738A5F;
+  margin-right: 21px;
   border-radius: 8px;
   font-weight: 500;
   color: white;
@@ -745,10 +765,26 @@ justify-content: flex-end;
 .right {
   margin-right: 20px;
 }
+.all_article_show {
+  width: 80%;
+  margin: 0 auto;
+}
 .preview {
   height: 220px;
   border-radius: 10px;
   position: relative;
+}
+.cont_art {
+  position: relative;
+  margin-bottom: 40px;
+}
+.title_article {
+  position: absolute;
+  bottom: 0px;
+  left: 30px;
+}
+.article_content {
+  margin-top: 50px;
 }
 .bottom_of_answer {
   bottom: 0px;
@@ -791,6 +827,9 @@ justify-content: flex-end;
 .TwoColumns {
   border: 1px solid red;
 }
+img {
+  border-radius: 10px;
+}
 .title--white {
   color: white;
   font-weight: 500;
@@ -800,9 +839,22 @@ justify-content: flex-end;
   color: white;
   margin-right: 30px;
   font-weight: 500;
-  margin-bottom: 15px;
   line-height: 35.22px;
   font-size: 30px;
+}
+.article--white--show {
+  color: white;
+  margin-right: 30px;
+  font-weight: 500;
+  line-height: 35.22px;
+  font-size: 40px;
+  margin-bottom: 50px;
+}
+.content--article {
+  font-weight: 400;
+  width: 70%;
+  font-size: 23px;
+  color: black;
 }
 .article--black {
   color: black;
@@ -818,6 +870,14 @@ justify-content: flex-end;
 .post_image {
   margin-bottom: 10px;
 border-radius: 29px 29px 0px 0px;
+height: 336.03px;
+width: 100%;
+object-fit: cover !important;
+}
+.article_preview {
+  margin-top: 0px;
+  margin-bottom: 10px;
+border-radius: 20px;
 height: 336.03px;
 width: 100%;
 object-fit: cover !important;
