Добавила картинки к категориям + отобразила их в меню

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,6 @@
-
+<div className="header_second">
+  <%= react_component 'M_TagsBar', {categories: @categories } %>
+</div>
 <div class="container_body_posts">
   <div class="content_posts">
     <div class="container_content">
