--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,6 +8,23 @@ body {
   color: white;
   margin: 0px;
 }
+.header_second {
+  position: fixed;
+  z-index: 1;
+  margin-top: -204px;
+position: fixed;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  background: #F8F8F8 !important;
+}
+.header_tags {
+
+  display: flex;
+  margin-top: 100px;
+  margin-left: 240px;
+}
 .A_H4--black {
   font-size: 30px;
   font-weight: 500;
@@ -50,6 +67,23 @@ body {
   font-weight: 400;
   width: 78%;
   margin-top: -5px;
+}
+
+option {
+  margin-top: 20px;
+}
+.width {
+  width: 40% !important;
+}
+.select_main {
+  width: 40%;
+  height: 53px;
+  margin-top: 35px;
+  border-radius: 10px;
+  font-weight: 500;
+  font-size: 18px;
+  color: #959595;
+  padding: 10px;
 }
 .input_form {
   margin-right: 16px;
@@ -263,6 +297,56 @@ table {
 .water {
   background-image: url('water.svg');
   background-size: contain;
+  background-repeat: no-repeat;
+  width: 13px;
+  margin-left: -3px;
+  margin-right: 5px;
+  height: 16px;
+}
+.erth {
+  background-image: url('Erth.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 19px;
+  margin-left: -3px;
+  margin-right: 5px;
+  height: 16px;
+}
+.gre {
+  background-image: url('green.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 18px;
+    margin-left: -5px;
+    margin-right: 7px;
+    height: 18px;
+}
+.help {
+  background-image: url('help.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 18px;
+    margin-left: -5px;
+    margin-right: 7px;
+    height: 18px;
+}
+.sun {
+  background-image: url('sun.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 18px;
+    margin-left: -5px;
+    margin-right: 7px;
+    height: 18px;
+}
+.buy {
+  background-image: url('Buy.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 18px;
+    margin-left: -5px;
+    margin-right: 7px;
+    height: 18px;
 }
 .category_icon {
   width: 10px;
@@ -304,6 +388,7 @@ width: 70%;
 }
 .container_content {
 width: 100%;
+margin-top: 200px !important;
 margin-left: -29px;
   // border: 1px solid #A9E163;
 }
@@ -333,8 +418,6 @@ margin-left: -29px;
 .container_body_posts {
   width: 92%;
   margin-top: 80px !important;
-
-  display: flex;
     margin: 0 auto;
     height: 200px;
 }
@@ -519,13 +602,15 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   color: white;
 }
 .button--long {
-  width: 100%;
+  width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
   background: #738A5F;
-border-radius: 26px;
+border-radius: 10px;
 font-weight: 500;
+margin-left: 375px;
+margin-top: 15px;
 font-size: 18px;
 color: white !important;
 height: 51px;
@@ -792,8 +877,10 @@ justify-content: flex-end;
 }
 .Category--default {
   background: white;
+  margin-right: 10px;
   border-radius: 27px;
   color: black;
+  display: inline-flex;
   margin-bottom: 20px;
   font-weight: 600;
   font-size: 14px;
