--- a/app/views/promo/index.html.erb
+++ b/app/views/promo/index.html.erb
@@ -3,7 +3,9 @@
       <%= react_component 'O_PostsMainPage', {articles: @articles} %>
       <div class="tags_main_page">
         <%= react_component 'M_MainPageTagsView', {posts: @posts} %>
+      <div>
         <%= react_component 'M_QuestionCard', {posts: @posts, post: @post, user: @user} %>
+      </div>
       </div>
       <%= react_component 'O_PostsMainPage', {articles: @articles} %>
       <%= react_component 'M_EmailSend' %>
