--- a/app/views/promo/index.html.erb
+++ b/app/views/promo/index.html.erb
@@ -2,7 +2,7 @@
       <%= react_component 'M_TopMenu', {categories: @categories}%>
       <%= react_component 'O_PostsMainPage', {articles: @articles} %>
       <div class="tags_main_page">
-        <%= react_component 'M_MainPageTagsView', {posts: @posts} %>
+        <%= react_component 'M_MainPageTagsView', {categories: @categories} %>
       <div>
         <%= react_component 'M_QuestionCard', {posts: @posts, post: @post, user: @user} %>
       </div>
