Отображение блока видео-уроков

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,5 +3,5 @@
 
 <%= react_component 'O_ArticleView', {articles: @articles} %>
 </div>
-<%# <%= link_to 'New Article', new_article_path %> %>
+<%= link_to 'New Article', new_article_path %>
 <%= react_component 'O_Footer' %>
