--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,19 +8,21 @@ body {
   color: white;
   margin: 0px;
 }
+.text_video {
+  display: flex;
+  justify-content: center;
+}
 .header_second {
   position: fixed;
   z-index: 1;
   margin-top: -204px;
-position: fixed;
+  position: fixed;
   width: 100%;
-
   display: flex;
   align-items: center;
   background: #F8F8F8 !important;
 }
 .header_tags {
-
   display: flex;
   margin-top: 100px;
   margin-left: 240px;
@@ -993,6 +995,26 @@ justify-content: flex-end;
   line-height: 35.22px;
   font-size: 30px;
 }
+.Video_post:nth-of-type(2n) {
+  padding-bottom: 10px;
+}
+.Video_post:nth-of-type(1) {
+  margin-bottom: 25px;
+}
+.Video_post:nth-of-type(3) {
+  margin-bottom: 25px;
+}
+.video_posts_view {
+  background-size: cover;
+}
+.article--white--small {
+  color: white;
+  font-size: 20px;
+  margin-right: 30px;
+  font-weight: 600;
+  line-height: 23px;
+  margin-left: 20px;
+}
 .article--white--show {
   color: white;
   margin-right: 30px;
@@ -1192,11 +1214,49 @@ footer {
 }
 .Links--black {
   font-weight: 400;
-font-size: 18px;
-text-align: center;
-line-height: 21px;
+  font-size: 18px;
+  text-align: center;
+  line-height: 21px;
+  color: #B3B3B3;
+}
+.video_posts_view {
+  border-radius: 15px;
+  height: 268px;
+}
+.Video_post {
+  width: 33%;
+  position: relative;
+  margin-left: 30px;
+}
+.bottom_video {
+  position: absolute;
+  bottom: 10px;
+}
+.bottom_video:nth-of-type(2n) {
+  position: absolute;
 
-color: #B3B3B3;
+}
+.top_video {
+  margin-left: 20px;
+  padding-top: 20px;
+}
+.Video_post:last-of-type {
+  margin-right: 30px;
+}
+.Video_post:nth-of-type(2n) {
+  margin-top: 28px;
+}
+.video_column {
+  display: flex;
+  margin-top: 40px;
+}
+.O_VideoBar {
+  padding-bottom: 80px;
+  width: 100%;
+  padding-top: 30px;
+  border-radius: 30px;
+  background: url('back_maon.png');
+  background-size: cover;
 }
 .box_theme {
   display: flex;
@@ -1211,5 +1271,4 @@ color: #B3B3B3;
 input[type="submit"] {
   background: #738A5F;
   border: 1px solid #E0E0E0;
-
 }
