--- a/app/views/promo/index.html.erb
+++ b/app/views/promo/index.html.erb
@@ -4,9 +4,8 @@
       <%= react_component 'O_VideoBar', {articles: @articles} %>
       <%= react_component 'O_4ColumnsPosts', {articles: @articles} %>
       <div class="tags_main_page">
-        <%= react_component 'M_MainPageTagsView', {categories: @categories} %>
+        <%= react_component 'M_MainPageTagsView', {categories: @categories, posts: @posts, user: @user} %>
       <div>
-        <%= react_component 'M_QuestionCard', {posts: @posts, post: @post, user: @user} %>
       </div>
       </div>
       <%= react_component 'O_PostsMainPage', {articles: @articles} %>
