--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -117,6 +117,10 @@ justify-content: center;
 align-items: center;
 color: white;
 }
+.p_tag {
+  font-size: 25px;
+  font-weight: 500;
+}
 .A_PTag--white {
   font-weight: 400;
   font-size: 20px;
@@ -995,6 +999,42 @@ justify-content: flex-end;
   font-weight: 500;
   line-height: 35.22px;
   font-size: 30px;
+}
+.account--avatar {
+  display: flex;
+  justify-content: center;
+}
+.end--of--article {
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 30px;
+  background: #738A5F;
+  height: 173px;
+}
+.A_PTag--white--default {
+  font-size: 20px;
+  color: white;
+}
+.avatar_page {
+  width: 119px;
+}
+.end--article {
+  width: 93%;
+  margin: 0 auto;
+}
+.account--card {
+  width: 328px;
+  padding-top: 37px;
+  margin-left: 60px;
+  position: fixed;
+  top: 119px;
+  background: white;
+  border-radius: 30px;
+}
+.preview--account {
+  width: 100%;
+  height: 290px;
+  object-fit: cover;
 }
 .post_on_main_page {
   width: 66%;
