Закончила show поста

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -573,9 +573,20 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   justify-content: space-between;
   align-items: center;
 }
+.comment--show {
+  margin-top:30px;
+  border-radius: 11px;
+  background: white;
+  padding-left: 30px;
+  padding-top: 20px;
+}
+.icon--post {
+  margin-right: 15px;
+}
 .answer_window {
-
-  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  margin-top: 10p !important;
 }
 #comment_commenter {
   width: 300px;
@@ -773,10 +784,14 @@ justify-content: flex-end;
   margin-top: 50px;
 }
 .comment_body_form {
-  width: 104%;
+  width: 100%;
+  margin-bottom: 10px;
   border-radius: 7px;
-
-
+}
+.delete--icon {
+  width: 21px;
+  margin-bottom: 10px;
+  margin-right: 20px;
 }
 .comment_body {
   width: 104%;
@@ -935,9 +950,24 @@ justify-content: flex-end;
   border-radius: 10px;
   position: relative;
 }
+
+.answer_button {
+  display: flex;
+  align-items: center;
+
+}
 .cont_art {
   position: relative;
   margin-bottom: 40px;
+}
+.text--end--article {
+  width: 400px;
+  padding-top: 1px;
+  padding-left: 27px;
+}
+.category--end--article {
+  padding-top: 15px;
+  padding-left: 27px;
 }
 .title_article {
   position: absolute;
@@ -965,10 +995,32 @@ justify-content: flex-end;
   align-items: center;
 }
 .content--black {
-  font-weight: 400;
+  font-weight: 500;
   font-size: 30px;
   line-height: 21px;
+  color: #62636B;
+
+}
+.post--buttons {
+  display: flex;
+  margin-left: 35px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+  justify-content: space-between;
+}
+.answer--icon {
+  margin-right: 15px;
+}
+.contentpost--black {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
   color: black;
+
+  margin-right: 30px;
+  margin-bottom: 20px;
+  padding-bottom: 5px;
 }
 .content--grey {
   font-weight: 500;
