--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
 <div class="container_body_posts">
   <div class="content_posts">
     <div class="container_content">
-      <%= react_component 'M_QuestionCard', {posts: @posts, category: @category } %>
+      <%= react_component 'M_QuestionCard', {posts: @posts, category: @category, comments: @comments } %>
     </div>
   </div>
 </div>
