--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,16 +1,12 @@
 <div className="cont_art">
-<%= react_component 'O_ArticleShow', {article: @article, hashtag: @hashtag} %>
+<%= react_component 'O_ArticleShow', {article: @article, hashtag: @hashtag, article_comments: @article_comments} %>
 
 </div>
 <div className="end--article">
 <%= react_component 'M_EndOfArticle', {hashtag: @hashtag} %>
 </div>
 <h2>Comments</h2>
-<h2>Comments</h2>
-<%= render @article.article_comments %>
-
+<p><%= render @article.article_comments %><p>
 <h2>Add a comment:</h2>
 <%= render "article_comments/form" %>
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
 <%= react_component 'O_Footer' %>
