--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,7 +3,7 @@
 
 </div>
 
-	<div class="field comment_body_form">
+	<div class="comment_body_form">
     <%= f.cktext_area :body %>
   </div>
 	<div class="actions">
