--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -633,14 +633,28 @@ font-feature-settings: 'pnum' on, 'lnum' on;
   justify-content: center;
   align-items: center;
   background: #738A5F;
-border-radius: 10px;
-font-weight: 500;
-margin-left: 375px;
-margin-top: 15px;
-font-size: 18px;
-color: white !important;
-height: 51px;
-text-align: center;
+  border-radius: 10px;
+  font-weight: 500;
+  margin-left: 375px;
+  margin-top: 15px;
+  font-size: 18px;
+  color: white !important;
+  height: 51px;
+  text-align: center;
+}
+.button--long--in--article {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #738A5F;
+  border-radius: 10px;
+  font-weight: 500;
+  margin-top: 15px;
+  font-size: 18px;
+  color: white !important;
+  height: 51px;
+  text-align: center;
 }
 .FourColumn {
   background: white;
@@ -1001,6 +1015,7 @@ justify-content: flex-end;
   color: #62636B;
 
 }
+
 .post--buttons {
   display: flex;
   margin-left: 35px;
@@ -1017,9 +1032,18 @@ justify-content: flex-end;
   font-size: 18px;
   line-height: 21px;
   color: black;
-
   margin-right: 30px;
   margin-bottom: 20px;
+  padding-bottom: 5px;
+}
+.contentpost--black--in--post {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: black;
+  margin-right: 30px;
+  margin-bottom: 20px;
+  margin-left: 30px;
   padding-bottom: 5px;
 }
 .content--grey {
