--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,12 @@
     <%= javascript_include_tag Ckeditor.cdn_url %>
   </head>
   <body>
+     <%= link_to 'Sign In', new_user_session_path %> | <%= link_to 'Sign Up', new_user_registration_path %>
+    <% if user_signed_in?%>
   <%= react_component 'O_Header', {current_user: current_user} %>
-
+  <% else %>
+  <%= react_component 'O_HeaderDefault'%>
+  <% end %>
 
     <!-- <div class="right_buttons">
      <% if user_signed_in?%>
