--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,20 @@
+<div class="reg_container">
+<div class="reg_image">
+</div>
+<div class="reg_info">
+  <div class="reg_inputs">
 
-<div class="container_reg">
+
   <h2>Регистрация</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <div class="field">
     <p>Логин:</p>
-      <%= f.text_field :username, autocomplete: "username" %>
+      <%= f.text_field :username, autocomplete: "username", placeholder: "Логин"%>
   </div>
   <div class="field">
     <p>Почта:</p>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Электронная почта" %>
   </div>
 
   <div class="field">
@@ -17,12 +22,12 @@
     <% if @minimum_password_length %>
     <em><%= @minimum_password_length %> знаков минимум</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: "Пароль" %>
   </div>
 
   <div class="field">
     <p>Подтверждение пароля:</p>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "повторите пароль" %>
   </div>
   <div class="field">
   <p>Загрузите аватар</p>
@@ -33,4 +38,6 @@
   </div>
 <% end %>
 <%= render "devise/shared/links" %>
+</div>
+</div>
 </div>
