--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
 <%= react_component 'A_PreviewAccount' %>
 <%= react_component 'M_AccountCard', {current_user: current_user} %>
+<%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
