--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,36 +5,29 @@
   <div class="reg_inputs">
 
 
-  <h2>Регистрация</h2>
+  <h2 class="registration">Пользоваться «Florum» удобнее, если у вас есть профиль</h2>
+  <p class="reg--text">Вы сможете сохранять статьи в закладки и помогать пользователям в их пути</p>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <div class="field">
-    <p>Логин:</p>
-      <%= f.text_field :username, autocomplete: "username", placeholder: "Логин"%>
+      <%= f.text_field :username, autocomplete: "username", placeholder: "Логин", class: 'text--field'%>
   </div>
   <div class="field">
-    <p>Почта:</p>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Электронная почта" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Электронная почта/ Номер телефона" %>
   </div>
 
   <div class="field">
-    <p>Введите пароль:</p>
-    <% if @minimum_password_length %>
-    <em><%= @minimum_password_length %> знаков минимум</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password", placeholder: "Пароль" %>
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: "Придумайте пароль" %>
   </div>
 
   <div class="field">
-    <p>Подтверждение пароля:</p>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "повторите пароль" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Подтвердите пароль" %>
   </div>
-  <div class="field">
-  <p>Загрузите аватар</p>
-  <%= f.file_field :avatar %>
+  <div class="field--avatar">
+  <%= f.file_field :avatar, class: 'custom-file-input' %>
   </div>
   <div class="actions">
-    <%= f.submit "Зарегестрироваться" %>
+    <%= f.submit "Зарегестрироваться", :class => 'submit_reg' %>
   </div>
 <% end %>
 <%= render "devise/shared/links" %>
