Добавила и настроила лайки

--- a/app/assets/stylesheets/registration.scss
+++ b/app/assets/stylesheets/registration.scss
@@ -52,7 +52,7 @@ input[type="password"]:hover {
   border: 1px solid #738A5F;
   transition: 0.3s all;
 }
-input[type="submit"] {
+.submit_reg {
   background: #738A5F !important;
   border: 1px solid #E0E0E0;
 }
