--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -32,16 +32,15 @@ td {
   padding: 0 5px 7px;
 background: inherit !important;}
 
-input[type=submit] {
-  background: #738A5F;
-  border: 1px solid #E0E0E0;
-  color: white;
-  border-radius: 8px;
-  font-weight: 400;
-  font-size: 20px;
-  width: auto;
-  padding: 10px 43px 10px 43px;
-}
+// input[type=submit] {
+//   background: #738A5F;
+//   color: white;
+//   border-radius: 8px;
+//   font-weight: 400;
+//   font-size: 20px;
+//   width: auto;
+//   padding: 10px 43px 10px 43px;
+// }
 ::placeholder {
   color: #C5C1C1;
 }
