Сделала 2 страницы для администратора, добавила ему фичи удаления и редактирования всего

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,18 +26,21 @@
  }
  .actual {
    font-weight: 500;
-font-size: 40px;
+   font-size: 40px;
  }
-
+.second--link {
+  margin-right: 25px;
+}
+.third--link {
+  margin-right: 25px;
+}
  .post_table {
-
    width: 100%;
-   background: #F3F3F3;
    margin-left: -10px;
    height: 40px;
    display: flex;
-align-items: center;
-padding-left: 17px;
+   align-items: center;
+   padding-left: 17px;
  }
  .table_title {
    width: 25%;
