--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -7,9 +7,15 @@
 <% end %>
 </div>
 </div>
+
+
+<% if current_user.isadmin == true%>
+<%= render "stories/admin" %>
+<% else %>
 <%= react_component 'M_TopArticle'%>
+<% end %>
+
 <div class="container_articles">
 <%= react_component 'O_ArticleView', {stories: @stories, sorts: @sorts, sort: @sort, points: @points} %>
 </div>
-<%# <%= link_to 'New Story', new_story_path %> %>
 <%= react_component 'O_Footer' %>
