--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -5,6 +5,11 @@
   background: url('back_hashtag.png');
   background-size: cover;
 }
+.new--story {
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 100px !important;
+}
 .Hashtag--default {
   color: black;
   margin-top: 30px;
