--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,3 +1,72 @@
-// Place all the styles related to the categories controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.container_categories {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+.cate--margin {
+  margin-top: 100px !important;
+  width: 40%;
+  margin-bottom: 40px !important;
+  margin: 0 auto;
+}
+.new--cate {
+  width: 40%;
+  margin: 0 auto;
+}
+.submit_cate {
+  height: 50px;
+  background: #284941;;
+  border: none;
+  font-weight: 300 !important;
+  color: white;
+  border-radius: 40px;
+  font-size: 20px;
+  width: 300px;
+}
+.category_container {
+  width: 19%;
+  background: white;
+  border-radius: 40px;
+  padding-left: 30px;
+  padding-right: 20px;
+  margin-right: 15px;
+  align-items: center;
+  margin-bottom: 20px;
+  height: 50px;
+  justify-content: space-between;
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.07);
+  display: flex;
+}
+.button--tags {
+  background: #293C37;
+    margin-right: 21px;
+    border-radius: 20px;
+    font-weight: 500;
+    color: white;
+    font-size: 17px;
+    padding: 9px 20px 9px 20px;
+        height: fit-content;
+}
+.actions--cate {
+  display: flex;
+}
+.categories--content {
+  display: flex;
+  flex-wrap: wrap;
+}
+.icon--name {
+  align-items: center;
+  display: flex;
+
+}
+.icon {
+  display: flex;
+}
+.tags--head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.tagg {
+  height: object-fit;
+}
