--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -944,14 +944,16 @@ justify-content: flex-end;
   background-color: #F2F2F2;;
   transition-duration: 0.5s;
 }
-.category_container {
-  border: 1px solid black;
-  padding: 15px;
-  margin-right: 15px;
+.counter--text {
+  font-size: 25px;
+  font-weight: 400;
+}
+.counter {
   align-items: center;
-  border-radius: 30px;
-  display: flex;
-  justify-content: space-between;
+}
+.left--icon {
+  margin-right: 15px;
+  width: 25px !important;
 }
 .all {
   display: flex;
