--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -32,8 +32,8 @@
       <%= form.label :content %>
       <%= form.cktext_area :content %>
     </div>
-    
+
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Абоба' %>
   </div>
 <% end %>
