--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Category</h1>
+<h1 class="cate--margin">Новая категория</h1>
 
 <%= render 'form', category: @category %>
-
-<%= link_to 'Back', categories_path %>
